--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   "homepage": "https://github.com/my-nft/dynamic-liquidity#readme",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@uniswap/v3-periphery": "^1.4.3",
     "hardhat": "^2.17.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3",
+    "@uniswap/v3-core": "^1.0.1",
     "chai": "^4.3.8",
     "ethers": "^6.7.1"
   },
@@ -38,5 +40,4 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext"
   }
-  
 }
