--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3",
+    "@prb/math": "^4.0.1",
     "@uniswap/v3-core": "^1.0.1",
     "chai": "^4.3.8",
-    "ethers": "^6.7.1"
+    "ethers": "^6.7.1",
+    "prb-math": "^2.4.3"
   },
   "compilerOptions": {
     "module": "NodeNext",
